--- a/style.css
+++ b/style.css
@@ -22,16 +22,6 @@ body {
     background-color: var(--body-color);
 }
 
-nav {
-    background-color: var(--body-color);
-    padding: 20px 18%;
-    font-weight: lighter;
-    font-size: 18px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}   
-
 section {
     padding: 80px 18%;
 }
@@ -86,7 +76,9 @@ h1 {
     text-transform: uppercase;
 }
 
-.rol, .overlay h1 {
+
+.rol,
+.overlay h1 {
     font-size: 20px;
     text-transform: uppercase;
     font-weight: bold;
@@ -100,7 +92,8 @@ h1 {
     color: var(--teretiary-color);
 }
 
-.description, .overlay p {
+.description,
+.overlay p {
     font-size: 20px;
 }
 
@@ -119,7 +112,7 @@ button {
     background-color: var(--primary-color);
 }
 
-.card-project{
+.card-project {
     width: 330px;
     height: 200px;
     position: relative;
@@ -128,13 +121,13 @@ button {
     border-radius: 30px;
 }
 
-.card-project img{
+.card-project img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
 
-.overlay{
+.overlay {
     position: absolute;
     top: 0;
     left: 0;
@@ -146,7 +139,7 @@ button {
     gap: 10px;
     justify-content: center;
     align-items: center;
-    color:#fff;
+    color: #fff;
     transform: scale(0);
     transition: .3s ease;
     text-align: center;
@@ -154,26 +147,22 @@ button {
     padding: 20px;
 }
 
-.card-project:hover .overlay{
+.card-project:hover .overlay {
     transform: scale(1);
 }
 
 .grid-projects {
     display: grid;
     justify-items: center;
-    grid-template-columns: repeat(
-        auto-fit,
-        minmax(
-            350px,
-            1fr
-        )
-    );
+    grid-template-columns: repeat(auto-fit,
+            minmax(350px,
+                1fr));
     gap: 16px;
 }
 
 h2 {
     text-align: center;
-    font-size: 35px;
+    font-size: 33px;
 }
 
 .logo {
@@ -246,13 +235,9 @@ h2 {
 
 .grid-skills {
     display: grid;
-    grid-template-columns: repeat(
-        auto-fit,
-        minmax(
-            250px,
-            1fr
-        )
-    );
+    grid-template-columns: repeat(auto-fit,
+            minmax(250px,
+                1fr));
     justify-items: center;
     gap: 16px;
 }
@@ -266,3 +251,47 @@ footer {
     padding: 10px;
     margin-top: 100px;
 }
+
+@media (max-width: 1300px) {
+    section {
+        padding: 80px 12%;
+    }
+}
+
+@media (max-width: 1200px) {
+    section {
+        padding: 80px 10%;
+    }
+}
+
+@media (max-width: 900px) {
+    section {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .download-cv {
+        margin: auto;
+    }
+
+    .about_photo {
+        height: 90%;
+        width: 90%;
+    }
+}
+
+@media (max-width: 490px) {
+    .grid-projects {
+        display: grid;
+        justify-items: center;
+        grid-template-columns: repeat(auto-fit,
+                minmax(90%,
+                    1fr));
+    }
+
+    .card-project {
+        width: 95%;
+        height: 250px;
+    }
+}
+
