--- a/typingAnimation.css
+++ b/typingAnimation.css
@@ -26,3 +26,9 @@
         border-color: transparent
     }
 }
+
+@media (max-width: 900px) {
+    .typing-animation {
+        margin: auto;
+    }
+}
