--- a/style.css
+++ b/style.css
@@ -1,6 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 
 
+
+@keyframes show {
+    from {
+        opacity: 0; scale: 10%;
+    }
+
+    to {
+        opacity: 1; scale: 100%;
+    }
+}
+
+section {
+    view-timeline-name: --reveal;
+
+    animation-name: show;
+    animation-fill-mode: both;
+
+    animation-timeline: --reveal;
+    animation-range: entry 25% cover 50%;
+}
+
 :root {
     --primary-color: #7fda89;
     --secondary-color: #e6f99d;
