add scroll-behavior smooth

--- a/styles/style.css
+++ b/styles/style.css
@@ -8,6 +8,10 @@
     color: var(--primary-text-color);
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     background-color: var(--body-color);
 }
