--- a/styles/scroll-animation.css
+++ b/styles/scroll-animation.css
@@ -1,10 +1,10 @@
 @keyframes show {
     from {
-        opacity: 0; scale: 10%;
+        scale: 60%;
     }
 
     to {
-        opacity: 1; scale: 100%;
+        scale: 100%;
     }
 }
 
