--- a/styles/button.css
+++ b/styles/button.css
@@ -10,6 +10,7 @@ button {
 .button--prymary {
     color: var(--body-color);
     background-color: var(--primary-color);
+    border: none;
 }
 
 .button--secondary {
